# my-portfolio

./: .env.dist  main.py  pyproject.toml  readme.md  requirements.txt
app/: settings.py  urls.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/management/commands/: create_sample_data.py
portfolio/migrations/: 0001_initial.py
static/css/: modern-styles.css  styles.css
static/js/: portfolio.js  scripts.js
templates/: base.html
templates/portfolio/: about.html  contact.html  home.html  project_detail.html  projects.html
tgbot/: admin.py  loader.py  run.py
tgbot/bot/: routers.py
tgbot/bot/handlers/: __init__.py  msg_text.py
tgbot/bot/handlers/admin/: admin.py
tgbot/bot/handlers/user/: __init__.py  help.py  invite.py  lang.py  start.py
tgbot/bot/keyboards/default/: base.py
tgbot/bot/middlewares/: __init__.py  admin.py  i18n.py  log.py  start.py  user.py
tgbot/bot/others/: commands.py  states.py
tgbot/database/models/: tgusers.py
tgbot/database/services/: users.py
tgbot/locales/: bot.pot
tgbot/locales/en/LC_MESSAGES/: bot.mo  bot.po
tgbot/locales/ru/LC_MESSAGES/: bot.mo  bot.po
tgbot/locales/uk/LC_MESSAGES/: bot.mo  bot.po
tgbot/migrations/: 0001_initial.py
tgbot/utils/: logging.py
